@@ -86,6 +86,8 @@ set(LINUX_COMPILE_FLAGS
 	-pipe								# Use Pipes
 	-fvisibility=hidden					# In order to reduce the binary size, don't put private symbols into the resulting binary (http://gcc.gnu.org/wiki/Visibility)
 	-fvisibility-inlines-hidden			# In order to reduce the binary size, don't put private symbols into the resulting binary (http://gcc.gnu.org/wiki/Visibility)
+	-ffunction-sections					# For slightly reduced binary size (http://gcc.gnu.org/onlinedocs/gcc-4.0.4/gcc/Optimize-Options.html)
+	-fdata-sections						# For slightly reduced binary size (http://gcc.gnu.org/onlinedocs/gcc-4.0.4/gcc/Optimize-Options.html)
 	# The following flag usage is basing on information from http://developer.amd.com/documentation/articles/pages/Compiler-FlagDrivenPerformanceGains.aspx
 	-ffast-math							# Perform floating point transformations that may break IEEE/ISO rules regarding floating point arithmetic
 	# Some dialect-options of gcc: http://gcc.gnu.org/onlinedocs/gcc/C_002b_002b-Dialect-Options.html
@@ -134,5 +136,15 @@ endif()
 set(LINUX_LINKER_FLAGS
 	${LINUX_LINKER_FLAGS}
 	-Wl,--as-needed						# Quote from http://www.gentoo.org/proj/en/qa/asneeded.xml : "The flag tells the linker to link in the produced binary only the libraries containing symbols actually used by the binary itself"
+	-Wl,--gc-sections					# For slightly reduced binary size
 	-Wl,--no-undefined					# Show undefined symbols as linker errors, else we only notice undefined symbols when using the shared library at runtime
 )
+if(NOT CMAKE_BUILD_TYPE MATCHES Debug)
+	##################################################
+	## Release
+	##################################################
+	set(LINUX_LINKER_FLAGS
+		${LINUX_LINKER_FLAGS}
+		-Wl,--strip-all					# For reduced binary size: Throw away as much as possible
+	)
+endif()
