@@ -1,5 +1,6 @@
 Changes in PixelLight 0.9.9-R1 (not yet released)
 - Feature: "PLRendererOpenGLES2" now also supports desktop PC GPU drivers capable of native OpenGL ES 2.0 instead of just an emulator when developing on a desktop PC
+- Change (Linux): Tweaked the compiler and linker settings to reduce the binary size
 - Bugfix: PLRendererOpenGL & PLRendererOpenGLES2: Automatic texture uncompression was broken ("Passing "empty" images to the GPU no longer creates internal image data"-change in PixelLight 0.9.6-R1)
 
 
